# amethyst_learn

./: README.md
first_game/: Cargo.toml
first_game/config/: display.ron  input.ron
first_game/src/: main.rs  state.rs
